changed styles to fix fonts on iOS on splash screen and menus.  Fixes 13, Fixes 12

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -23,6 +23,7 @@ body {
 }
 
 .version_number {
+	font-family: "Arial Black", Gadget, sans-serif;
 	color: #FFFFFF;
 	text-align: center;
 	position: absolute;
@@ -33,6 +34,7 @@ body {
 }
 
 .splash-links {
+	font-family: "Arial Black", Gadget, sans-serif;
 	position:absolute;
 	bottom:0;
 	margin-left: auto;
